Fix line width to avoid overflow

--- a/base.css
+++ b/base.css
@@ -41,7 +41,6 @@ footer{
         border: 1px solid #D7D7D7;
         margin-top: 0px;
         margin-bottom: 0px;
-        width: 100%;
     }
 
     .wrapper{
